[bdist_wheel]
universal = 1

[metadata]
name = upsint
url = https://github.com/packit-service/upsint
description = Easy way to git.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Software Development
keywords = git, github

[options]
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
install_requires =
    click
    tabulate
    python-gitlab
    pygithub

# [options.packages.find]
# exclude =
#     tests*

[options.entry_points]
console_scripts =
    upsint=upsint.cli:upsint
